<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <data>

        <import type="android.view.View" />

        <variable
            name="accountInformationViewModel"
            type="com.samsung.uni_block_app.viewmodel.AccountInformationViewModel" />

        <variable
            name="transactionViewModel"
            type="com.samsung.uni_block_app.viewmodel.TransactionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background"
        android:clipChildren="false"
        tools:context=".view.TransactionFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/transfer_info_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/outline_ellipse_white"
            android:translationY="@dimen/negative_overlap_margin"
            app:layout_constraintBottom_toTopOf="@+id/transfer_funds_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/senders_address_label"
                style="@style/senders_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/senders_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sender_public_address_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:text="@{accountInformationViewModel.selectedAccount.address}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/senders_address_label"
                tools:text="0xa70bc045865090Xvd890xa70bc045865090Xvd89" />
            <!--'tf' denotes Transfer Fragment-->
            <ImageButton
                android:id="@+id/balance_refresh_button_tf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/balance_progressbar_tf"
                app:layout_constraintEnd_toStartOf="@+id/balance_progressbar_tf"
                app:layout_constraintTop_toTopOf="@+id/balance_progressbar_tf"
                app:srcCompat="@drawable/ic_icon_refresh" />

            <ProgressBar
                android:id="@+id/balance_progressbar_tf"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:indeterminateTint="@color/text_color_balance"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/balance_text_view_tf"
                app:layout_constraintEnd_toStartOf="@+id/balance_text_view_tf"
                app:layout_constraintTop_toTopOf="@+id/balance_text_view_tf" />

            <TextView
                android:id="@+id/balance_text_view_tf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_color_balance"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/sender_public_address_text_view"
                app:layout_constraintStart_toStartOf="@+id/sender_public_address_text_view"
                app:layout_constraintTop_toBottomOf="@+id/sender_public_address_text_view"
                tools:text="31313.0" />

            <TextView
                android:id="@+id/balance_unit_text_view_tf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ethereum_symbol"
                android:textColor="#ff000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/balance_text_view_tf"
                app:layout_constraintStart_toEndOf="@+id/balance_text_view_tf"
                app:layout_constraintTop_toTopOf="@+id/balance_text_view_tf" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/send_fund_address_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/card_outline"
                app:layout_constraintBottom_toTopOf="@+id/currency_amount_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance_text_view_tf"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <EditText
                    android:id="@+id/fund_receiver_address_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:background="#ffffff"
                    android:ems="9"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/scan_fund_receiver_address_button"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageButton
                    android:id="@+id/scan_fund_receiver_address_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/outline_circle_white"
                    android:src="@drawable/ic_qrcode"
                    app:layout_constraintBottom_toBottomOf="@+id/fund_receiver_address_edit_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fund_receiver_address_edit_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/receiver_address_label"
                style="@style/token_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                android:text="@string/receiver_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/send_fund_address_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/currency_amount_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/card_outline"
                app:layout_constraintBottom_toTopOf="@+id/transaction_speed_radio_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/send_fund_address_layout"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <EditText
                    android:id="@+id/fund_amount_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:background="#ffffff"
                    android:ems="9"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/coin_name_text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/coin_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="ETH" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/currency_amount_label"
                style="@style/token_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                android:text="@string/currency_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currency_amount_layout" />

            <TextView
                android:id="@+id/transaction_speed_label"
                style="@style/senders_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/transaction_speed"
                app:layout_constraintBottom_toTopOf="@+id/transaction_speed_radio_group"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioGroup
                android:id="@+id/transaction_speed_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currency_amount_layout"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <RadioButton
                    android:id="@+id/transaction_speed_slow"
                    style="@style/token_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transaction_speed_slow" />

                <RadioButton
                    android:id="@+id/transaction_speed_normal"
                    style="@style/token_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/transaction_speed_normal" />

                <RadioButton
                    android:id="@+id/transaction_speed_fast"
                    style="@style/token_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transaction_speed_fast" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/transfer_funds_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@color/text_color_balance"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/transfer_funds"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/transfer_funds_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>